feat: add aot-cpu backend and rename interp backend
- Add backend-aot-cpu plugin with C code generation and cc compilation
- Rename hodu-backend-interp to backend-hodu-interp-cpu
- Refactor executor modules to use SDK types directly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,3 @@
 [workspace]
-members = ["hodu-backend-interp"]
+members = ["backend-hodu-interp-cpu", "backend-aot-cpu"]
 resolver = "2"
-
-[workspace.dependencies]
-hodu_cpu_kernels = { path = "../hodu/crates/hodu_cpu_kernels" }
-hodu_plugin_sdk = { path = "../hodu/crates/hodu_plugin_sdk" }
