--- a/hodu-backend-aot-cpu-plugin/Cargo.toml
+++ b/hodu-backend-aot-cpu-plugin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hodu-cli-plugin-backend-aot-cpu"
+name = "hodu-backend-aot-cpu-plugin"
 version = "0.1.0"
 description = "AOT CPU backend plugin for Hodu - compiles snapshots to native code via C"
 license = "BSD-3-Clause"
@@ -8,16 +8,14 @@ edition = "2021"
 publish = false
 repository = "https://github.com/daminstudio/hodu-plugins"
 
-[lib]
-crate-type = ["cdylib"]
-
-[build-dependencies]
-hodu-cli-plugin-sdk = { path = "../../hodu/hodu-cli-plugin-sdk" }
+[[bin]]
+name = "hodu-backend-aot-cpu-plugin"
+path = "src/main.rs"
 
 [dependencies]
 cc = "1.2.48"
-hodu_core = { path = "../../hodu/crates/hodu_core" }
 hodu_cpu_kernels = { path = "../../hodu/crates/hodu_cpu_kernels" }
-hodu-cli-plugin-sdk = { path = "../../hodu/hodu-cli-plugin-sdk" }
+hodu-plugin-sdk = { path = "../../hodu/hodu-plugin-sdk" }
 libc = "0.2.177"
 libloading = "0.9.0"
+serde_json = "1.0"
