--- a/plugins.toml
+++ b/plugins.toml
@@ -7,5 +7,5 @@ description = "AOT compiler for CPU via C code generation"
 git = "https://github.com/daminstudio/hodu-plugins"
 path = "hodu-backend-aot-cpu-plugin"
 versions = [
-  { version = "0.1.0", tag = "aot-cpu-v0.1.0" },
+  { version = "0.1.0", tag = "aot-cpu-v0.1.0", sdk = "0.1" },
 ]
