--- a/hodu-backend-aot-cpu-plugin/Cargo.toml
+++ b/hodu-backend-aot-cpu-plugin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hodu-backend-aot-cpu-plugin"
-version = "0.1.1"
+version = "0.1.0"
 description = "AOT CPU backend plugin for Hodu - compiles snapshots to native code via C"
 license = "BSD-3-Clause"
 authors = ["Han Damin <miniex@daminstudio.net>"]
@@ -14,8 +14,9 @@ path = "src/main.rs"
 
 [dependencies]
 cc = "1.2.48"
-hodu_cpu_kernels = { git = "https://github.com/daminstudio/hodu" }
-hodu-plugin-sdk = { git = "https://github.com/daminstudio/hodu" }
+hodu_cpu_kernels = { path = "../../hodu/crates/hodu_cpu_kernels" }
+hodu-plugin-sdk = { path = "../../hodu/hodu-plugin-sdk" }
 libc = "0.2.177"
 libloading = "0.9.0"
 serde_json = "1.0"
+
